# woss

./: .gitignore  Cargo.toml  README.md
challenge/: Cargo.toml  README.md  capsule.toml
challenge/contracts/step-verifier-lock/: Cargo.toml
challenge/contracts/step-verifier-lock/src/: entry.rs  error.rs  main.rs
challenge/crates/woss/: Cargo.toml  build.rs
challenge/crates/woss/examples/: demo.rs
challenge/crates/woss/schemas/: woss.mol
challenge/crates/woss/src/: dissection.rs  lib.rs  machine.rs  memory.rs  prover.rs  types.rs
challenge/crates/woss/src/memory/: verifier.rs
challenge/crates/woss/src/types/: conversion.rs
challenge/crates/woss/src/types/conversion/: macros.rs
docs/: vm-steps-commit-and-verify-design.md
tests/: Cargo.toml
tests/src/: lib.rs  scripts.rs
tests/src/scripts/: step_verifier_lock.rs  tx_dataloader.rs
woss/: Cargo.toml
woss/src/: common.rs  dissection.rs  machine.rs  main.rs  memory.rs  types.rs  verifier.rs
woss/src/memory/: prover.rs  verifier.rs
