[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
scripts = []

[dependencies]
blake2b-ref = "0.3.1"
ckb-script = "0.107"
ckb-traits = "0.107"
ckb-types = "0.107"
env_logger = "0.10"
once_cell = "1.17"
rand = "0.8"
woss = { path = "../challenge/crates/woss" }
